# cv-demo

./: .gitignore  main.py  model_funcs.py  pyproject.toml  run.sh
