[project]
name = "cv-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics",
    "opencv-python",
    "numpy",
    "lap>=0.5.1",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime",
]
gpu = [
    "onnxruntime-gpu",
]
